# knights-spiral

./: README.md  pyproject.toml
.github/workflows/: generate.yml  test.yml
knights_spiral/: cli.py  image.py  knights.py  spiral.py
tests/: test_cli.py  test_image.py  test_knights.py  test_spiral.py
