[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knights-spiral"
version = "0.1.0"
description = "Knight's spiral image generator"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.0.0",
]

[project.scripts]
knights-spiral = "knights_spiral.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "PyHamcrest>=2.0.0",
    "pyfakefs>=5.0.0",
]
